--- a/app/views/recupero/recuperoNotaCredito/lineaNotaCredito.scala.html
+++ b/app/views/recupero/recuperoNotaCredito/lineaNotaCredito.scala.html
@@ -1,7 +1,8 @@
 @(linea: models.recupero.RecuperoNotaCredito, editable: Boolean)
+@import models.auth._
 
 <tr data-id="@linea.id">
-	 
+
 	<!-- <td class="accion-editar"><a class="btn btn-default btn-xs modificarNotaCredito" href="@controllers.recupero.routes.RecuperoNotasCreditosController.editar(linea.id)"><i class="glyphicon glyphicon-edit"></i></a></td>
 	  -->
 	<td>@if(linea.planilla != null){@(linea.planilla.getRecuperoPlanillaEjercicio())}</td>
@@ -11,7 +12,12 @@
 	<td>@linea.cantidad</td>
 	<td>@utils.NumberUtils.moneda(linea.precio, 2)</td>
 	<td>@utils.NumberUtils.moneda(linea.getTotal(),2)</td>
- 
-		<td><a class="btn btn-default btn-xs eliminarNotaCredito delete-confirm-link" href="@controllers.recupero.routes.RecuperoNotasCreditosController.eliminar(linea.id)"><i class="glyphicon glyphicon-trash icono-eliminar"></i></a></td>
-	 
+
+	<td>
+		@if(Permiso.check("recuperoNotasEliminar")) {
+			<a class="btn btn-default btn-xs eliminarNotaCredito delete-confirm-link" href="@controllers.recupero.routes.RecuperoNotasCreditosController.eliminar(linea.id)">
+			<i class="glyphicon glyphicon-trash icono-eliminar"></i></a>
+		}
+	</td>
+
 </tr>
