--- a/app/views/recupero/recuperoPago/indexRecuperoPago.scala.html
+++ b/app/views/recupero/recuperoPago/indexRecuperoPago.scala.html
@@ -17,7 +17,7 @@
 		classEstado = "autorizado"
 	}
 	classEstado
-	
+
 }
 
 @views.html.recupero.mainRecupero("Lista de Pagos", scripts) {
@@ -26,7 +26,7 @@
 			<div class="col-sm-7">
 				<h1>Lista de Pagos</h1>
 			</div>
-			
+
 			<div class="col-sm-5">
 				<div class="dropdown pull-right">
 				 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
@@ -38,7 +38,7 @@
 				  	<li><a id="reporteRecuperoPagoExcel" href="#" data-url="@controllers.recupero.routes.RecuperoReportesController.reportePagosExcel()">Reporte Excel</a></li>
 				  </ul>
 				</div>
-				
+
 				<div class="dropdown pull-right btn-header">
 				 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
 				 	<i class="glyphicon glyphicon-cog"></i>
@@ -46,19 +46,19 @@
 				    <span class="caret"></span>
 				  </button>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-				  	
+
 				  </ul>
 				</div>
-					
+
 				<!-- <div class="pull-right btn-header">
 					<a href="@controllers.recupero.routes.RecuperoPagosController.crear()?@UriTrack.encode()"  class="btn btn-default"><i class="glyphicon glyphicon-plus-sign"></i> Nuevo Pago</a>
 				</div> -->
 			</div>
 		</div>
 	</div>
-	
+
 	@views.html.tags.successError()
-	
+
 	<div id="actions">
 		<form action="" id="formSearchRecuperoPagos" method="GET">
 		<div class="row">
@@ -67,21 +67,21 @@
 				  <button type="button" id="btn-filtro-borrador" rel="borrador" class="btn btn-default btn-filtros"><i class="glyphicon glyphicon-pencil"></i><br>Borrador
 				 	@checkbox(formBuscador("btnFiltro[0]"), 'hidden -> "hidden")
 				  </button>
-				  <button type="button" id="btn-filtro-encurso" rel="encurso" class="btn btn-default btn-filtros"><i class="glyphicon glyphicon-arrow-right"></i><br>En Curso 
+				  <button type="button" id="btn-filtro-encurso" rel="encurso" class="btn btn-default btn-filtros"><i class="glyphicon glyphicon-arrow-right"></i><br>En Curso
 				  	@checkbox(formBuscador("btnFiltro[1]"), 'hidden -> "hidden")
 				  </button>
-				  <button type="button" id="btn-filtro-aprobado" rel="aprobado" class="btn btn-default btn-filtros"><i class="glyphicon glyphicon-ok"></i><br>Aprobado 
+				  <button type="button" id="btn-filtro-aprobado" rel="aprobado" class="btn btn-default btn-filtros"><i class="glyphicon glyphicon-ok"></i><br>Aprobado
 				  	@checkbox(formBuscador("btnFiltro[2]"), 'hidden -> "hidden")
 				  </button>
-				  <button type="button" id="btn-filtro-cancelado" rel="cancelado" class="btn btn-default btn-filtros"><i class="glyphicon glyphicon-minus-sign"></i><br>Cancelado 
+				  <button type="button" id="btn-filtro-cancelado" rel="cancelado" class="btn btn-default btn-filtros"><i class="glyphicon glyphicon-minus-sign"></i><br>Cancelado
 				  	@checkbox(formBuscador("btnFiltro[3]"), 'hidden -> "hidden")
 				  </button>
 				</div>
 			</div>
 		</div>
 
-		<div class="row">	
-    		
+		<div class="row">
+
 			<div class="col-sm-2">
 				<div class="form-group">
 					<label for="nombre" class="control-label">Nombre
@@ -89,7 +89,7 @@
 					</label>
 				</div>
 			</div>
-			
+
 			<div class="col-sm-4">
 				<label class="control-label">Cliente</label>
 					<div class="input-group">
@@ -97,57 +97,57 @@
 						@inputText(formBuscador("cliente_id"), 'hidden -> "hidden", 'id -> "cliente_id")
 						<span class="input-group-addon">
 							<a href="#" class="searchModal"
-										id="searchCliente" 
-										data-title="Selección de Clientes" 
-										data-url="@controllers.compras.routes.ClientesController.modalBuscar()" 
-										data-height="650" 
-										data-width="700" 
-										data-listen="modal.seleccion.cliente.simple" 
-										data-label="#cliente" 
+										id="searchCliente"
+										data-title="Selección de Clientes"
+										data-url="@controllers.compras.routes.ClientesController.modalBuscar()"
+										data-height="650"
+										data-width="700"
+										data-listen="modal.seleccion.cliente.simple"
+										data-label="#cliente"
 										data-field="#cliente_id">
 								<i class="glyphicon glyphicon-search"></i>
 							</a>
 						</span>
 					</div>
-				
+
 			</div>
 			<div class="col-sm-2">
 				<div class=" form-group">
 					<label class="control-label">Tipo de cliente</label>
 					@select(formBuscador("cliente_tipo_id"), ClienteTipo.find.all().map { p => p.id.toString -> p.nombre}, 'class -> "form-control select", '_default -> "Seleccionar")
 				</div>
-			</div>	
+			</div>
 			<div class="col-sm-4">
-				<label for="deposito" class="control-label">Institucion</label> 
+				<label for="deposito" class="control-label">Institucion</label>
 				<div class="input-group">
 					@inputText(formBuscador("deposito.nombre"),'class -> "form-control", 'id -> "deposito_nombre", 'autocomplete -> "off")
 					@inputText(formBuscador("deposito_id"),'hidden -> "hidden", 'id -> "deposito_id")
 					<span class="input-group-addon">
-	                	<a href="#" id="searchDeposito" data-title="Selección de Institucion" 
-	                	data-url="@controllers.delegacion.routes.DepositosController.modalBuscar()" 
-	                	data-height="650" data-width="700" 
-	                	data-listen="modal.seleccion.deposito.simple" 
+	                	<a href="#" id="searchDeposito" data-title="Selección de Institucion"
+	                	data-url="@controllers.delegacion.routes.DepositosController.modalBuscar()"
+	                	data-height="650" data-width="700"
+	                	data-listen="modal.seleccion.deposito.simple"
 	                	data-label="#deposito_nombre" data-field="#deposito_id" /> <i class="glyphicon glyphicon-search"></i></a>
 	                </span>
 				</div>
 			</div>
-		</div>	
-		<div class="row">		
-			
+		</div>
+		<div class="row">
+
 			<div class="col-sm-2 input-group">
 				<label class="control-label">Fecha de Pago</label>
 				<div>
 				@inputText(formBuscador("fecha_desde"), 'class -> "form-control dateMask inputDateMascara", 'id -> "desde", 'placeholder -> "Desde")
 				@inputText(formBuscador("fecha_hasta"), 'class -> "form-control dateMask inputDateMascara", 'id -> "hasta", 'placeholder -> "Hasta")
 				</div>
-				
+
 			</div>
 			<div class="col-sm-2">
 				<label class="control-label">Punto Venta</label>
 				<div class="">
-				@select(formBuscador("puntoventa_id"), 
+				@select(formBuscador("puntoventa_id"),
 				PuntoVenta.find.all().map { p => p.id.toString -> p.numero}, 'class -> "form-control select", '_default -> "Seleccionar")
-				</div> 
+				</div>
 			</div>
 			<div class="col-sm-2">
 				<div class="form-group">
@@ -156,7 +156,7 @@
 					</label>
 				</div>
 			</div>
-			
+
 			<div class="col-sm-2" >
 				<label class="control-label">Tipo de pago</label>
 				<div class="">
@@ -164,23 +164,23 @@
 				</div>
 			</div>
 			<div class="col-sm-2">
-				<label for="planilla" class="control-label">Planilla</label> 
+				<label for="planilla" class="control-label">Planilla</label>
 				<div class="input-group">
 					@inputText(formBuscador("planilla.recuperoPlanillaEjercicio"),'class -> "form-control", 'id -> "planilla")
 					@inputText(formBuscador("planilla_id"),'hidden -> "hidden", 'id -> "planilla_id")
-	
+
 					<span class="input-group-addon">
-					<a href="#" 
-					id="searchPlanilla" data-title="Selección de Planilla" 
-					data-url="@controllers.recupero.routes.RecuperoPlanillasController.modalBuscar()" 
-					data-height="650" data-width="700" 
-					data-listen="modal.seleccion.planilla.simple" 
-					data-label="#planilla" 
+					<a href="#"
+					id="searchPlanilla" data-title="Selección de Planilla"
+					data-url="@controllers.recupero.routes.RecuperoPlanillasController.modalBuscar()"
+					data-height="650" data-width="700"
+					data-listen="modal.seleccion.planilla.simple"
+					data-label="#planilla"
 					data-field="#planilla_id">
 					<i class="glyphicon glyphicon-search"></i></a></span>
 				</div>
 			</div>
-			
+
 		</div>
 		<div class="row">
 			<div class="col-sm-2">
@@ -196,18 +196,18 @@
 				</div>
 			</div>
 		</div>
-		 
+
 		</form>
 	</div>
-	
+
 	@if(buscador.getTotalRowCount == 0) {
-        
+
         <div class="well">
             <em>No se encuentran Pagos</em>
         </div>
-        
+
     } else {
-    	
+
 		<table id="listaRecuperoFacturas" class="table table-striped table-bordered">
 			<thead>
 				 <tr style="background: #FFFFFF;">
@@ -231,10 +231,10 @@
 			</thead>
 			<tbody>
 			@for(rf <- buscador.getList) {
-				
+
 				<tr class="pointer @getClassEstado(rf.estado)" data-estado="@rf.estado_id" data-href="@controllers.recupero.routes.RecuperoPagosController.ver(rf.id)&@UriTrack.encode()">
 					<td><input type="checkbox" name="check_listado[]" value="@rf.id" class="notSeleccion" id="check-@rf.id"/></td>
-					 
+
 					<td><a class="btn btn-default btn-xs notSeleccion" href="@controllers.recupero.routes.RecuperoPagosController.editar(rf.id)&@UriTrack.encode()"><i class="glyphicon glyphicon-edit"></i></a></td>
 					<td>@(rf.nombre)</td>
 					<td>@if(rf.planilla != null){@rf.planilla.getRecuperoPlanillaEjercicioDeposito()}</td>
@@ -250,13 +250,15 @@
 							@(rf.estado.nombre)
 						}</td>
 					<td>
-						<a class="btn btn-default btn-xs delete-confirm-link notSeleccion" href="@controllers.recupero.routes.RecuperoPagosController.eliminar(rf.id)&@UriTrack.encode()">
-							<i class="glyphicon glyphicon-trash icono-eliminar"></i>
-						</a>
+						@if(rf.parcializada == null || !rf.parcializada){
+							<a class="btn btn-default btn-xs delete-confirm-link notSeleccion" href="@controllers.recupero.routes.RecuperoPagosController.eliminar(rf.id)&@UriTrack.encode()">
+								<i class="glyphicon glyphicon-trash icono-eliminar"></i>
+							</a>
+						}
 					</td>
 				</tr>
              }
-             
+
 	        </tbody>
 	        <tfoot>
 		        <tr>
@@ -266,7 +268,7 @@
 		        </tr>
 	        </tfoot>
         </table>
-    	
+
     	<div class="pagination pull-right">
 		    @views.html.helpers.paginador(buscador, controllers.recupero.routes.RecuperoPagosController.index())
 		</div>
@@ -276,13 +278,13 @@ $( function (){
 	var b = 0;
 	var c = 0;
 	$(".total").each(function (index) {
-		
-		n = Number($(this).attr("rel"))+n 
+
+		n = Number($(this).attr("rel"))+n
 	})
 	$(".totalFooter").append(formatNumberPesos(parseFloat(n).toFixed(2)));
-	
+
 	$( "#checkAll" ).click(function() {
-		
+
 		  	selectAll();
 	});
 	$( "input[name='check_listado[]']" ).click(function() {
@@ -296,7 +298,7 @@ function selectTrList(){
 	var c = 0;
 	$(".total").each(function (index) {
 		if($(this).parent().find("input[name='check_listado[]']").prop("checked")){
-			n = Number($(this).attr("rel"))+n 
+			n = Number($(this).attr("rel"))+n
 		}
 	})
 	$(".totalFooter").empty();
@@ -304,23 +306,23 @@ function selectTrList(){
 }
 
 function selectAll(){
-	var n = 0; 
-	var b = 0; 
-	var c = 0; 
+	var n = 0;
+	var b = 0;
+	var c = 0;
 	if($("#checkAll").prop("checked")){
 		$("input[name='check_listado[]']").prop( "checked", true );
-		
+
 	}else{
 		$( "input[name='check_listado[]']").prop( "checked", false );
 	}
-	
+
 	$(".total").each(function (index) {
-		n = Number($(this).attr("rel"))+n 
+		n = Number($(this).attr("rel"))+n
 	})
 	$(".totalFooter").empty();
 	$(".totalFooter").append(formatNumberPesos(parseFloat(n).toFixed(2)));
 }
 
-</script>		
+</script>
  	 }
 }
