add nota debito

--- a/app/views/recupero/recuperoNotaDebito/lineaNotaDebito.scala.html
+++ b/app/views/recupero/recuperoNotaDebito/lineaNotaDebito.scala.html
@@ -15,7 +15,7 @@
 
 		<td>
 		@if(Permiso.check("recuperoNotasEliminar")) {
-			<a class="btn btn-default btn-xs eliminarNotaCredito delete-confirm-link" href="@controllers.recupero.routes.RecuperoNotasDebitosController.eliminar(linea.id)">
+			<a class="btn btn-default btn-xs eliminarNotaDebito delete-confirm-link" href="@controllers.recupero.routes.RecuperoNotasDebitosController.eliminar(linea.id)">
 			<i class="glyphicon glyphicon-trash icono-eliminar"></i></a>
 		}
 		</td>
