--- a/app/views/recupero/recuperoFactura/indexRecuperoFactura.scala.html
+++ b/app/views/recupero/recuperoFactura/indexRecuperoFactura.scala.html
@@ -17,7 +17,7 @@
 		classEstado = "autorizado"
 	}
 	classEstado
-	
+
 }
 
 @views.html.recupero.mainRecupero("Lista de Facturas", scripts) {
@@ -26,7 +26,7 @@
 			<div class="col-sm-7">
 				<h1>Lista de facturas</h1>
 			</div>
-			
+
 			<div class="col-sm-5">
 				<div class="dropdown pull-right">
 				 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
@@ -36,12 +36,12 @@
 				  </button>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
 				  	<li><a id="reporteRecuperoFacturaExcel" href="#" data-url="@controllers.recupero.routes.RecuperoReportesController.reporteFacturasExcel()">Reporte Excel</a></li>
-				  			   
+
 				  	<li><a id="reportePlanilla" href="#" data-url="@controllers.recupero.routes.RecuperoReportesController.modalPlanilla()">Planilla Diaria</a></li>
-				  			   	
+
 				  </ul>
 				</div>
-				
+
 				<div class="dropdown pull-right btn-header">
 				 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
 				 	<i class="glyphicon glyphicon-cog"></i>
@@ -49,19 +49,19 @@
 				    <span class="caret"></span>
 				  </button>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-				  	
+
 				  </ul>
 				</div>
-					
+
 				<div class="pull-right btn-header">
 					<a href="@controllers.recupero.routes.RecuperoFacturasController.crear()?@UriTrack.encode()"  class="btn btn-default"><i class="glyphicon glyphicon-plus-sign"></i> Nueva Factura</a>
 				</div>
 			</div>
 		</div>
 	</div>
-	
+
 	@views.html.tags.successError()
-	
+
 	<div id="actions">
 		<form action="" id="formSearchRecuperoFacturas" method="GET">
 		<div class="row">
@@ -70,13 +70,13 @@
 				  <button type="button" id="btn-filtro-borrador" rel="borrador" class="btn btn-default btn-filtros"><i class="glyphicon glyphicon-pencil"></i><br>Borrador
 				 	@checkbox(formBuscador("btnFiltro[0]"), 'hidden -> "hidden")
 				  </button>
-				  <button type="button" id="btn-filtro-encurso" rel="encurso" class="btn btn-default btn-filtros"><i class="glyphicon glyphicon-arrow-right"></i><br>En Curso 
+				  <button type="button" id="btn-filtro-encurso" rel="encurso" class="btn btn-default btn-filtros"><i class="glyphicon glyphicon-arrow-right"></i><br>En Curso
 				  	@checkbox(formBuscador("btnFiltro[1]"), 'hidden -> "hidden")
 				  </button>
-				  <button type="button" id="btn-filtro-aprobado" rel="aprobado" class="btn btn-default btn-filtros"><i class="glyphicon glyphicon-ok"></i><br>Aprobado 
+				  <button type="button" id="btn-filtro-aprobado" rel="aprobado" class="btn btn-default btn-filtros"><i class="glyphicon glyphicon-ok"></i><br>Aprobado
 				  	@checkbox(formBuscador("btnFiltro[2]"), 'hidden -> "hidden")
 				  </button>
-				  <button type="button" id="btn-filtro-cancelado" rel="cancelado" class="btn btn-default btn-filtros"><i class="glyphicon glyphicon-minus-sign"></i><br>Cancelado 
+				  <button type="button" id="btn-filtro-cancelado" rel="cancelado" class="btn btn-default btn-filtros"><i class="glyphicon glyphicon-minus-sign"></i><br>Cancelado
 				  	@checkbox(formBuscador("btnFiltro[3]"), 'hidden -> "hidden")
 				  </button>
 				  <button type="button" rel="pagada" class="btn btn-default btn-filtros">
@@ -87,8 +87,8 @@
 			</div>
 		</div>
 
-		<div class="row">	
-    		
+		<div class="row">
+
 			<div class="col-sm-2">
 				<div class="form-group">
 					<label for="nombre" class="control-label">Nombre</label>
@@ -100,7 +100,7 @@
 			<div class="col-sm-2">
 				<label class="control-label">Punto Venta</label>
 				<div class="">
-				@select(formBuscador("puntoventa_id"), 
+				@select(formBuscador("puntoventa_id"),
 				PuntoVenta.find.all().map { p => p.id.toString -> p.numero}, 'class -> "form-control select", '_default -> "Seleccionar")
 				</div>
 			</div>
@@ -112,7 +112,7 @@
 					</div>
 				</div>
 			</div>
-			
+
 			<div class="col-sm-4">
 				<label class="control-label">Cliente</label>
 					<div class="input-group">
@@ -120,59 +120,59 @@
 						@inputText(formBuscador("cliente_id"), 'hidden -> "hidden", 'id -> "cliente_id")
 						<span class="input-group-addon">
 							<a href="#" class="searchModal"
-										id="searchCliente" 
-										data-title="Selección de Clientes" 
-										data-url="@controllers.compras.routes.ClientesController.modalBuscar()" 
-										data-height="650" 
-										data-width="700" 
-										data-listen="modal.seleccion.cliente.simple" 
-										data-label="#cliente" 
+										id="searchCliente"
+										data-title="Selección de Clientes"
+										data-url="@controllers.compras.routes.ClientesController.modalBuscar()"
+										data-height="650"
+										data-width="700"
+										data-listen="modal.seleccion.cliente.simple"
+										data-label="#cliente"
 										data-field="#cliente_id">
 								<i class="glyphicon glyphicon-search"></i>
 							</a>
 						</span>
 					</div>
-				
+
 			</div>
 
-			
+
 			<div class="col-sm-2 input-group">
 				<label class="control-label">Fecha de factura</label>
 				<div>
 				@inputText(formBuscador("fecha_desde"), 'class -> "form-control dateMask inputDateMascara", 'id -> "desde", 'placeholder -> "Desde")
 				@inputText(formBuscador("fecha_hasta"), 'class -> "form-control dateMask inputDateMascara", 'id -> "hasta", 'placeholder -> "Hasta")
 				</div>
-				
+
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-sm-2">
-				<label for="planilla" class="control-label">Planilla</label> 
+				<label for="planilla" class="control-label">Planilla</label>
 				<div class="input-group">
 					@inputText(formBuscador("planilla.recuperoPlanillaEjercicio"),'class -> "form-control", 'id -> "planilla")
 					@inputText(formBuscador("planilla_id"),'hidden -> "hidden", 'id -> "planilla_id")
-	
+
 					<span class="input-group-addon">
-					<a href="#" 
-					id="searchPlanilla" data-title="Selección de Planilla" 
-					data-url="@controllers.recupero.routes.RecuperoPlanillasController.modalBuscar()" 
-					data-height="650" data-width="700" 
-					data-listen="modal.seleccion.planilla.simple" 
-					data-label="#planilla" 
+					<a href="#"
+					id="searchPlanilla" data-title="Selección de Planilla"
+					data-url="@controllers.recupero.routes.RecuperoPlanillasController.modalBuscar()"
+					data-height="650" data-width="700"
+					data-listen="modal.seleccion.planilla.simple"
+					data-label="#planilla"
 					data-field="#planilla_id">
 					<i class="glyphicon glyphicon-search"></i></a></span>
 				</div>
 			</div>
 			<div class="col-sm-4">
-				<label for="deposito" class="control-label">Institucion</label> 
+				<label for="deposito" class="control-label">Institucion</label>
 				<div class="input-group">
 					@inputText(formBuscador("deposito.nombre"),'class -> "form-control", 'id -> "deposito_nombre", 'autocomplete -> "off")
 					@inputText(formBuscador("deposito_id"),'hidden -> "hidden", 'id -> "deposito_id")
 					<span class="input-group-addon">
-	                	<a href="#" id="searchDeposito" data-title="Selección de Institucion" 
-	                	data-url="@controllers.delegacion.routes.DepositosController.modalBuscar()" 
-	                	data-height="650" data-width="700" 
-	                	data-listen="modal.seleccion.deposito.simple" 
+	                	<a href="#" id="searchDeposito" data-title="Selección de Institucion"
+	                	data-url="@controllers.delegacion.routes.DepositosController.modalBuscar()"
+	                	data-height="650" data-width="700"
+	                	data-listen="modal.seleccion.deposito.simple"
 	                	data-label="#deposito_nombre" data-field="#deposito_id" /> <i class="glyphicon glyphicon-search"></i></a>
 	                </span>
 				</div>
@@ -190,26 +190,27 @@
 				</div>
 			</div>
 		</div>
-		 
+
 		</form>
 	</div>
-	
+
 	@if(buscador.getTotalRowCount == 0) {
-        
+
         <div class="well">
             <em>No se encuentran Facturas</em>
         </div>
-        
+
     } else {
-    	
+
 		<table id="listaRecuperoFacturas" class="table table-striped table-bordered">
 			<thead>
 				 <tr style="background: #FFFFFF;">
 			        <td colspan="7">Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s). </td>
 			        <td><b>Total:</b> <span class="baseFooter"></span></td>
 			        <td><b>Total:</b> <span class="ncFooter"></span></td>
+			        <td><b>Total:</b> <span class="ndFooter"></span></td>
 			        <td><b>Total:</b> <span class="totalFooter"></span></td>
-			        <td colspan="2">&nbsp</td>
+			        <td colspan="1">&nbsp</td>
 		        </tr>
 				<tr>
 					<th width="30"><input type="checkbox" name="checkAll" id="checkAll"/></th>
@@ -221,6 +222,7 @@
 					<th width="100">N° Factura</th>
 					<th width="95">Base</th>
 					<th width="95">N/C</th>
+					<th width="95">N/D</th>
 					<th width="95">Total</th>
 					<th width="100">Estado</th>
 					<th width="30">#</th>
@@ -228,7 +230,7 @@
 			</thead>
 			<tbody>
 			@for(rf <- buscador.getList) {
-				
+
 				<tr class="pointer @getClassEstado(rf.estado)" data-estado="@rf.estado_id" data-href="@controllers.recupero.routes.RecuperoFacturasController.ver(rf.id)&@UriTrack.encode()">
 					<td><input type="checkbox" name="check_listado[]" value="@rf.id" class="notSeleccion" id="check-@rf.id"/></td>
 					<td><a class="btn btn-default btn-xs notSeleccion" href="@controllers.recupero.routes.RecuperoFacturasController.editar(rf.id)&@UriTrack.encode()"><i class="glyphicon glyphicon-edit"></i></a></td>
@@ -239,12 +241,13 @@
 					<td>@if(rf.numero != null){@(rf.getNumeroFactura())}</td>
 					<td class="base" rel="@rf.getBase()">@(utils.NumberUtils.moneda(rf.getBase()))</td>
 					<td class="nc" rel="@rf.getTotalNotaCredito()">@(utils.NumberUtils.moneda(rf.getTotalNotaCredito()))</td>
+					<td class="nd" rel="@rf.getTotalNotaDebito()">@(utils.NumberUtils.moneda(rf.getTotalNotaDebito()))</td>
 					<td class="total" rel="@rf.getTotal()">@(utils.NumberUtils.moneda(rf.getTotal()))</td>
 					<td class="estado">@if(rf.estado != null){
 					    @(rf.estado.nombre)
 						@if(rf.getPorcentajePagado().compareTo(java.math.BigDecimal.ZERO) != 0) {
 							<br/>Pagado @rf.getPorcentajePagado()%
-						}					
+						}
 					}</td>
 					<td>
 						<a class="btn btn-default btn-xs delete-confirm-link notSeleccion" href="@controllers.recupero.routes.RecuperoFacturasController.eliminar(rf.id)&@UriTrack.encode()">
@@ -253,19 +256,20 @@
 					</td>
 				</tr>
              }
-             
+
 	        </tbody>
 	        <tfoot>
 		        <tr>
 			        <td colspan="7">&nbsp</td>
 			        <td><b>Total:</b> <span class="baseFooter"></span></td>
 			        <td><b>Total:</b> <span class="ncFooter"></span></td>
+			        <td><b>Total:</b> <span class="ndFooter"></span></td>
 			        <td><b>Total:</b> <span class="totalFooter"></span></td>
-			        <td colspan="2">&nbsp</td>
+			        <td colspan="1">&nbsp</td>
 		        </tr>
 	        </tfoot>
         </table>
-    	
+
     	<div class="pagination pull-right">
 		    @views.html.helpers.paginador(buscador, controllers.recupero.routes.RecuperoFacturasController.index())
 		</div>
@@ -274,28 +278,35 @@ $( function (){
 	var n = 0;
 	var nb = 0;
 	var nc = 0;
+	var nd = 0;
 	var b = 0;
 	var c = 0;
 	$(".total").each(function (index) {
-		
-		n = Number($(this).attr("rel"))+n 
+
+		n = Number($(this).attr("rel"))+n
 	})
 	$(".totalFooter").append(formatNumberPesos(parseFloat(n).toFixed(2)));
-	
+
 	$(".base").each(function (index) {
-		
-		nb = Number($(this).attr("rel"))+nb 
+
+		nb = Number($(this).attr("rel"))+nb
 	})
 	$(".baseFooter").append(formatNumberPesos(parseFloat(nb).toFixed(2)));
-	
+
 	$(".nc").each(function (index) {
-		
-		nc = Number($(this).attr("rel"))+nc 
+
+		nc = Number($(this).attr("rel"))+nc
 	})
 	$(".ncFooter").append(formatNumberPesos(parseFloat(nc).toFixed(2)));
-	
+
+	$(".nd").each(function (index) {
+
+		nd = Number($(this).attr("rel"))+nd
+	})
+	$(".ndFooter").append(formatNumberPesos(parseFloat(nd).toFixed(2)));
+
 	$( "#checkAll" ).click(function() {
-		
+
 		  	selectAll();
 	});
 	$( "input[name='check_listado[]']" ).click(function() {
@@ -304,25 +315,27 @@ $( function (){
 });
 
 function selectTrList(){
+	var nc = 0;
+	var nd = 0;
+	var nb = 0;
 	var n = 0;
-	var b = 0;
-	var c = 0;
+
 	$(".total").each(function (index) {
 		if($(this).parent().find("input[name='check_listado[]']").prop("checked")){
-			n = Number($(this).attr("rel"))+n 
+			n = Number($(this).attr("rel"))+n
 		}
 	})
 	$(".totalFooter").empty();
 	$(".totalFooter").append(formatNumberPesos(parseFloat(n).toFixed(2)));
-	
+
 	$(".base").each(function (index) {
 		if($(this).parent().find("input[name='check_listado[]']").prop("checked")){
-			nb = Number($(this).attr("rel"))+nb 
+			nb = Number($(this).attr("rel"))+nb
 		}
 	})
 	$(".baseFooter").empty();
 	$(".baseFooter").append(formatNumberPesos(parseFloat(nb).toFixed(2)));
-	
+
 	$(".nc").each(function (index) {
 		if($(this).parent().find("input[name='check_listado[]']").prop("checked")){
 			nc = Number($(this).attr("rel"))+nc
@@ -330,26 +343,35 @@ function selectTrList(){
 	})
 	$(".ncFooter").empty();
 	$(".ncFooter").append(formatNumberPesos(parseFloat(nc).toFixed(2)));
+
+	$(".nd").each(function (index) {
+		if($(this).parent().find("input[name='check_listado[]']").prop("checked")){
+			nd = Number($(this).attr("rel"))+nd
+		}
+	})
+	$(".ndFooter").empty();
+	$(".ndFooter").append(formatNumberPesos(parseFloat(nd).toFixed(2)));
 }
 
 function selectAll(){
-	var n = 0; 
-	var b = 0; 
-	var c = 0; 
+	var n = 0;
+	var b = 0;
+	var c = 0;
 	if($("#checkAll").prop("checked")){
 		$("input[name='check_listado[]']").prop( "checked", true );
-		
+
 	}else{
 		$( "input[name='check_listado[]']").prop( "checked", false );
 	}
-	
-	$(".total").each(function (index) {
-		n = Number($(this).attr("rel"))+n 
+
+	/*$(".total").each(function (index) {
+		n = Number($(this).attr("rel"))+n
 	})
 	$(".totalFooter").empty();
-	$(".totalFooter").append(formatNumberPesos(parseFloat(n).toFixed(2)));
+	$(".totalFooter").append(formatNumberPesos(parseFloat(n).toFixed(2)));*/
+	selectTrList();
 }
 
-</script>		
+</script>
  	 }
 }
