--- a/app/views/recupero/recuperoNotaDebito/indexRecuperoNotaDebito.scala.html
+++ b/app/views/recupero/recuperoNotaDebito/indexRecuperoNotaDebito.scala.html
@@ -11,7 +11,7 @@
 		</div>
 		<div class="panel-body">
 			@if(paginador.getTotalRowCount == 0) {
-        		<p id="mensajeSinResultados" class="well"><i class="glyphicon glyphicon-info-sign"></i> No hay Notas de Debitos para esta factura.</p>
+        		<p id="mensajeSinResultadosDebitos" class="well"><i class="glyphicon glyphicon-info-sign"></i> No hay Notas de Debitos para esta factura.</p>
     		}
 
 			<table id="listaDeNotaDebitos" class="table table-striped table-bordered @if(paginador.getTotalRowCount() <= 0){hide}">
@@ -108,8 +108,10 @@ $( function(){
 			$.post(href, data, function(resultado){
 				if(resultado.success && resultado.nuevo){
 					$('#listaLineaNotaDebitos tbody').prepend(resultado.html);
-					$('#mensajeSinResultados').remove();
+					$('#mensajeSinResultadosDebitos').remove();
 					$('#listaDeNotaDebitos').removeClass('hide');
+
+
 					modalCargaProductos.dialog( "destroy" );
 				} else if(resultado.success && resultado.modificar){
 					$(lineaParaEditar).replaceWith(resultado.html);
