--- a/app/views/haberes/liquidacionConceptos/verLiquidacionConcepto.scala.html
+++ b/app/views/haberes/liquidacionConceptos/verLiquidacionConcepto.scala.html
@@ -74,10 +74,18 @@
 	</div>
 </div>
 <div class="row">
-	<div class="col-sm-5">
+	<div class="col-sm-3">
 		<div class="form-group">
 			<label class="control-label">Clasificacion</label>
 			<p class="form-control-static form-control">@lcForm.field("liquidacionConceptoClasificacion.nombre").value</p>
+		</div>
+	</div>
+	<div class="col-sm-2">
+		<div class="form-group">
+			<label class="control-label">Control Guardia</label>
+			<p class="form-control-static form-control">
+				@if(lcForm("control_guardia").value == "true"){SI}else{NO}
+			</p>
 		</div>
 	</div>
 	<div class="col-sm-2">
