--- a/app/views/haberes/novedades/formNovedades.scala.html
+++ b/app/views/haberes/novedades/formNovedades.scala.html
@@ -3,8 +3,8 @@
 
 @import models.auth._
 @import models.haberes._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
-	
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
+
 	<div class="row">
 
 		<div class="col-sm-4">
@@ -14,13 +14,13 @@
 				@inputText(nForm("puesto_laboral_id"), 'hidden -> "hidden", 'id -> "puesto_laboral_id")
 				<span class="input-group-addon">
 					<a href="#" class="searchModal"
-								id="searchPuestoLaboral" 
-								data-title="Selección de puesto laboral" 
-								data-url="@controllers.haberes.routes.PuestosLaboralesController.modalBuscar()" 
-								data-height="650" 
-								data-width="700" 
-								data-listen="modal.seleccion.puestoLaboral.simple" 
-								data-label="#puesto_laboral" 
+								id="searchPuestoLaboral"
+								data-title="Selección de puesto laboral"
+								data-url="@controllers.haberes.routes.PuestosLaboralesController.modalBuscar()"
+								data-height="650"
+								data-width="700"
+								data-listen="modal.seleccion.puestoLaboral.simple"
+								data-label="#puesto_laboral"
 								data-field="#puesto_laboral_id">
 						<i class="glyphicon glyphicon-search"></i>
 					</a>
@@ -28,66 +28,66 @@
 			</div>
 			@nForm("puesto_laboral_id").error.map{ error => <div class="text-error">@error.message</div>}
 		</div>
-			
+
 		<div class="col-sm-2">
-			<label class="control-label">Periodo inicio</label> 
+			<label class="control-label">Periodo inicio</label>
 			<div class="form-group @if(nForm.error("periodo_inicio_id") != null) {has-error} else {has-required}">
 				<div class="input-group">
 				@inputText(nForm("periodoInicio.nombre"),'class -> "form-control", 'id -> "periodo_inicio")
 				@inputText(nForm("periodo_inicio_id"),'hidden -> "hidden", 'id -> "periodo_inicio_id")
 				<span class="input-group-addon">
 						<a href="#" class="searchModal"
-									id="searchPeriodoInicio" 
-									data-title="Selección de Periodo" 
-									data-url="@controllers.contabilidad.routes.PeriodosController.modalBuscar()" 
-									data-height="650" 
-									data-width="700" 
-									data-listen="modal.seleccion.periodo.simple" 
-									data-label="#periodo_inicio" 
+									id="searchPeriodoInicio"
+									data-title="Selección de Periodo"
+									data-url="@controllers.contabilidad.routes.PeriodosController.modalBuscar()"
+									data-height="650"
+									data-width="700"
+									data-listen="modal.seleccion.periodo.simple"
+									data-label="#periodo_inicio"
 									data-field="#periodo_inicio_id">
 							<i class="glyphicon glyphicon-search"></i>
 						</a>
 					</span>
-				</div>	
+				</div>
 			</div>
 			@nForm("periodo_inicio_id").error.map{ error => <div class="text-error">@error.message</div>}
 		</div>
-		
+
 		<div class="col-sm-2">
-			<label class="control-label">Periodo fin</label> 
+			<label class="control-label">Periodo fin</label>
 			<div class="form-group @if(nForm.error("periodo_hasta_id") != null) {has-error} else {has-required}">
 				<div class="input-group">
 				@inputText(nForm("periodoFin.nombre"),'class -> "form-control", 'id -> "periodo_fin")
 				@inputText(nForm("periodo_hasta_id"),'hidden -> "hidden", 'id -> "periodo_hasta_id")
 				<span class="input-group-addon">
 						<a href="#" class="searchModal"
-									id="searchPeriodoFin" 
-									data-title="Selección de Periodo" 
-									data-url="@controllers.contabilidad.routes.PeriodosController.modalBuscar()" 
-									data-height="650" 
-									data-width="700" 
-									data-listen="modal.seleccion.periodo.simple" 
-									data-label="#periodo_fin" 
+									id="searchPeriodoFin"
+									data-title="Selección de Periodo"
+									data-url="@controllers.contabilidad.routes.PeriodosController.modalBuscar()"
+									data-height="650"
+									data-width="700"
+									data-listen="modal.seleccion.periodo.simple"
+									data-label="#periodo_fin"
 									data-field="#periodo_hasta_id">
 							<i class="glyphicon glyphicon-search"></i>
 						</a>
 					</span>
-				</div>	
+				</div>
 			</div>
 			@nForm("periodo_hasta_id").error.map{ error => <div class="text-error">@error.message</div>}
 		</div>
-		
+
 		<div class="col-sm-2 @if(nForm.error("liquidacion_tipo_id") != null) {has-error}  else {has-required}">
 			<label class="control-label">Tipo
 			@select(nForm("liquidacion_tipo_id"), models.haberes.LiquidacionTipo.getTipos().map { p => p.id.toString -> p.nombre}, 'class -> "form-control select", '_default -> "Seleccionar")
 			</label>
 			@nForm("liquidacion_tipo_id").error.map{ error => <div class="text-error">@error.message</div>}
 		</div>
-		
+
 	</div>
-	
+
 	<div class="row">
-	
+
 		<div class="col-sm-4">
 			<label class="control-label">Concepto</label>
 			<div class="input-group  @if(nForm.error("liquidacion_concepto_id") != null) {has-error}  else {has-required}">
@@ -97,7 +97,7 @@
 			</div>
 			@nForm("liquidacion_concepto_id").error.map{ error => <div class="text-error">@error.message</div>}
 		</div>
-	
+
 		<div class="col-sm-2">
 			<label for="cantidad" class="control-label">Cantidad</label>
 			<div class="form-group @if(nForm.error("cantidad") != null) {has-error} else {has-required}">
@@ -105,30 +105,74 @@
 				@nForm("cantidad").error.map{ error => <div class="text-error">@error.message</div>}
 			</div>
 		</div>
-	
+
 		<div class="col-sm-2">
 			<label class="control-label">Importe</label>
-			<div class="form-group @if(nForm.error("importe") != null) {has-error}">	
+			<div class="form-group @if(nForm.error("importe") != null) {has-error}">
 				@inputText(nForm("importe"), 'class -> "form-control", 'id -> "importe")
 				@nForm("importe").error.map{ error => <div class="text-error">@error.message</div>}
 			</div>
 		</div>
-		
-		
+
+
 		<div class="col-sm-2">
 			<label class="control-label">Importe tope</label>
-			<div class="form-group @if(nForm.error("importe_tope") != null) {has-error}">	
+			<div class="form-group @if(nForm.error("importe_tope") != null) {has-error}">
 				@inputText(nForm("importe_tope"), 'class -> "form-control", 'id -> "importe_tope")
 				@nForm("importe_tope").error.map{ error => <div class="text-error">@error.message</div>}
 			</div>
 		</div>
-	
+
 	</div>
-	
 	<hr />
-	
-	<div id="listaNovedades" data-href="@controllers.haberes.routes.NovedadesController.lista()">
-	
+	<h3>Control Guardias</h3>
+	<div class="row">
+		<div class="col-sm-2">
+			<label class="control-label">Periodo fin</label>
+			<div class="form-group">
+				<div class="input-group">
+				@inputText(nForm("periodoConcepto.nombre"),'class -> "form-control", 'id -> "periodo_concepto")
+				@inputText(nForm("periodo_concepto_id"),'hidden -> "hidden", 'id -> "periodo_concepto_id")
+				<span class="input-group-addon">
+						<a href="#" class="searchModal"
+									id="searchPeriodoConcepto"
+									data-title="Selección de Periodo"
+									data-url="@controllers.contabilidad.routes.PeriodosController.modalBuscar()"
+									data-height="650"
+									data-width="700"
+									data-listen="modal.seleccion.periodo.simple"
+									data-label="#periodo_concepto"
+									data-field="#periodo_concepto_id">
+							<i class="glyphicon glyphicon-search"></i>
+						</a>
+					</span>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-8">
+			<div class="form-group">
+				<label for="inputOrganigrama" class="control-label">Departamento/Servicio</label>
+				<div class="form-group">
+				<div class="input-group">
+					@inputText(nForm("organigrama.nombre"),'class -> "form-control",'id -> "organigrama")
+					@inputText(nForm("organigrama_id"),'hidden -> "hidden")
+					<span class="input-group-addon">
+		                	<a href="#" id="searchOrganigrama" data-title="Selección de Departamento/Servicio"
+		                				data-url="@controllers.administracion.routes.OrganigramasController.modalBuscarServicios()"
+		                				data-height="650" data-width="700"
+		                				data-listen="modal.seleccion.servicio.simple"
+		                				data-label="#organigrama" data-field="#organigrama_id" /> <i class="glyphicon glyphicon-search"></i></a>
+		                </span>
+		          </div>
+				</div>
+			</div>
+		</div>
+
 	</div>
 
-	
+	<hr />
+
+	<div id="listaNovedades" data-href="@controllers.haberes.routes.NovedadesController.lista()">
+
+	</div>
+
