--- a/app/views/haberes/novedades/indexNovedades.scala.html
+++ b/app/views/haberes/novedades/indexNovedades.scala.html
@@ -3,7 +3,7 @@
 @import utils._
 @import models.auth._
 
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
 @scripts = {
 	<script src="@routes.Assets.at("javascripts/haberes/novedades.js")" type="text/javascript"></script>
@@ -16,7 +16,7 @@
 			<div class="col-sm-7">
 				<h1>Lista de novedades</h1>
 			</div>
-	
+
 			<div class="col-sm-5">
 				<div class="pull-right btn-header">
 					<a href="@controllers.haberes.routes.NovedadesController.crear()?@UriTrack.encode()"  class="form-control btn btn-default"><i class="glyphicon glyphicon-plus"></i> Crear novedades</a>
@@ -29,12 +29,12 @@
 			</div>
 		</div>
 	</div>
-	
+
 	@views.html.tags.successError()
 	<div id="actions">
 		<form action="" method="GET">
 			<div class="row">
-		
+
 				<div class="col-sm-3">
 					<label class="control-label">Puesto laboral</label>
 					<div class="input-group">
@@ -42,20 +42,20 @@
 						@inputText(formBuscador("puesto_laboral_id"), 'hidden -> "hidden", 'id -> "puesto_laboral_id")
 						<span class="input-group-addon">
 							<a href="#" class="searchModal"
-										id="searchPuestoLaboral" 
-										data-title="Selección de puesto laboral" 
-										data-url="@controllers.haberes.routes.PuestosLaboralesController.modalBuscar()" 
-										data-height="650" 
-										data-width="700" 
-										data-listen="modal.seleccion.puestoLaboral.simple" 
-										data-label="#puesto_laboral" 
+										id="searchPuestoLaboral"
+										data-title="Selección de puesto laboral"
+										data-url="@controllers.haberes.routes.PuestosLaboralesController.modalBuscar()"
+										data-height="650"
+										data-width="700"
+										data-listen="modal.seleccion.puestoLaboral.simple"
+										data-label="#puesto_laboral"
 										data-field="#puesto_laboral_id">
 								<i class="glyphicon glyphicon-search"></i>
 							</a>
 						</span>
 					</div>
-				</div>	
-						
+				</div>
+
 				<div class="col-sm-2 input-group">
 					<label class="control-label">Fecha Fin</label>
 					<div>
@@ -63,28 +63,28 @@
 					@inputText(formBuscador("fecha_hasta"), 'class -> "form-control inputDateMascara", 'id -> "hasta", 'placeholder -> "Hasta")
 					</div>
 				</div>
-				
+
 				<div class="col-sm-2">
 					<label class="control-label">Tipo
 					@select(formBuscador("liquidacion_tipo_id"), models.haberes.LiquidacionTipo.getTipos().map { p => p.id.toString -> p.nombre}, 'class -> "form-control select", '_default -> "Seleccionar")
 					</label>
 				</div>
-						
+
 				<div class="col-sm-2">
-					<label class="control-label"> 
+					<label class="control-label">
 						Tipo de carga
 						@select(formBuscador("carga"),options(""->"Ambos","manual"->"Manual","masiva"->"Masiva"), 'class -> "form-control select")
 					</label>
 				</div>
 				<div class="col-sm-3">
 					<div class="col-sm-6">
-						<label class="control-label"> 
+						<label class="control-label">
 							Estado
 							@select(formBuscador("activo"),options("activo"->"Activo",""->"Todos","desactivo"->"Desactivo"), 'class -> "form-control select")
 						</label>
 					</div>
 					<div class="col-sm-6">
-						<label class="control-label"> 
+						<label class="control-label">
 							C/M
 							@select(formBuscador("cm"),options(""->"","SI"->"SI","NO"->"NO"), 'class -> "form-control select")
 						</label>
@@ -92,7 +92,7 @@
 				</div>
 			</div>
 			<div class="row">
-		
+
 				<div class="col-sm-3">
 					<label class="control-label">Concepto</label>
 					<div class="input-group">
@@ -101,50 +101,50 @@
 						<span class="input-group-addon"><a href="#" id="searchConcepto" data-title="Selección de concepto" data-url="@controllers.haberes.routes.LiquidacionConceptosController.modalBuscar()" data-height="650" data-width="700" data-listen="modal.seleccion.concepto.simple" data-label="#concepto" data-field="#liquidacion_concepto_id"><i class="glyphicon glyphicon-search"></i></a></span>
 					</div>
 					@formBuscador("liquidacion_concepto_id").error.map{ error => <div class="text-error">@error.message</div>}
-				</div>	
+				</div>
 
 				<div class="col-sm-2">
-					<label for="inputPeriodo" class="control-label">Periodo de inicio</label> 
+					<label for="inputPeriodo" class="control-label">Periodo de inicio</label>
 					<div class="input-group">
 						@inputText(formBuscador("periodo_inicio"),'class -> "form-control",'id -> "periodo_inicio")
 						@inputText(formBuscador("periodo_inicio_id"),'hidden -> "hidden",'id -> "periodo_inicio_id")
 						<span class="input-group-addon">
 						<a href="#" class="searchModal"
-									id="searchPeriodoInicio" 
-									data-title="Selección de Periodo" 
-									data-url="@controllers.contabilidad.routes.PeriodosController.modalBuscar()" 
-									data-height="650" 
-									data-width="700" 
-									data-listen="modal.seleccion.periodo.simple" 
-									data-label="#periodo_inicio" 
+									id="searchPeriodoInicio"
+									data-title="Selección de Periodo"
+									data-url="@controllers.contabilidad.routes.PeriodosController.modalBuscar()"
+									data-height="650"
+									data-width="700"
+									data-listen="modal.seleccion.periodo.simple"
+									data-label="#periodo_inicio"
 									data-field="#periodo_inicio_id">
 							<i class="glyphicon glyphicon-search"></i>
 						</a>
 						</span>
 					</div>
 				</div>
-			
+
 				<div class="col-sm-2">
-					<label for="inputPeriodo" class="control-label">Periodo de fin</label> 
+					<label for="inputPeriodo" class="control-label">Periodo de fin</label>
 					<div class="input-group">
 						@inputText(formBuscador("periodo_fin"),'class -> "form-control",'id -> "periodo_fin")
 						@inputText(formBuscador("periodo_fin_id"),'hidden -> "hidden",'id -> "periodo_fin_id")
 						<span class="input-group-addon">
 						<a href="#" class="searchModal"
-									id="searchPeriodoFin" 
-									data-title="Selección de Periodo" 
-									data-url="@controllers.contabilidad.routes.PeriodosController.modalBuscar()" 
-									data-height="650" 
-									data-width="700" 
-									data-listen="modal.seleccion.periodo.simple" 
-									data-label="#periodo_fin" 
+									id="searchPeriodoFin"
+									data-title="Selección de Periodo"
+									data-url="@controllers.contabilidad.routes.PeriodosController.modalBuscar()"
+									data-height="650"
+									data-width="700"
+									data-listen="modal.seleccion.periodo.simple"
+									data-label="#periodo_fin"
 									data-field="#periodo_fin_id">
 							<i class="glyphicon glyphicon-search"></i>
 						</a>
 						</span>
 					</div>
 				</div>
-			
+
 				<div class="col-sm-2">
 					<div class="form-group">
 					<label for="buscar" class="control-label">&nbsp;</label>
@@ -163,14 +163,14 @@
 
 
  @if(buscador.getTotalRowCount == 0) {
-      
+
       <div class="well">
           <em>No se encuentran novedades</em>
       </div>
-      
+
   } else {
 
-Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s).   
+Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s).
 <table class="table table-striped table-bordered table-hover">
 	<thead>
 		<tr>
@@ -182,14 +182,17 @@ Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s).
 			<th width="90">P. inicio</th>
 			<th width="90">P. fin</th>
 			<th width="90">Fecha</th>
+
 			<th>Tipo Liq.</th>
+			<th width="90">P. Conc.</th>
+			<th width="90">Orga.</th>
 			<th></th>
 		</tr>
 	</thead>
 	<tbody>
-	
 
-	
+
+
         @for(novedad <- buscador.getList) {
 		<tr class="" data-href="@controllers.haberes.routes.NovedadesController.ver(novedad.id)&@UriTrack.encode()">
 			<td><a class="btn btn-default btn-xs" href="@controllers.haberes.routes.NovedadesController.editar(novedad.id)&@UriTrack.encode()"><i class="glyphicon glyphicon-edit"></i></a></td>
@@ -201,6 +204,8 @@ Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s).
 			<td>@if(novedad.periodoFin != null){@novedad.periodoFin.nombre}</td>
 			<td>@utils.DateUtils.formatDate(novedad.fecha_novedad)</td>
 			<td>@if(novedad.liquidacionTipo != null){@novedad.liquidacionTipo.nombre}</td>
+			<td>@if(novedad.periodoConcepto != null){@novedad.periodoConcepto.nombre}</td>
+			<td>@if(novedad.organigrama != null){@novedad.organigrama.nombre}</td>
 			<td>
 				@if(Permiso.check("liquidacionNovedadesEliminar")) {
 				<a class="btn btn-default btn-xs notSeleccion" id="eliminarNovedadIndex"  href="@controllers.haberes.routes.NovedadesController.eliminar(novedad.id)&@UriTrack.encode()">
@@ -218,6 +223,6 @@ Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s).
 </div>
 
   }
-	
-	
+
+
 }
