--- a/app/views/rrhh/agenteAsistenciaLicencia/indexAgenteAsistenciaLicencia.scala.html
+++ b/app/views/rrhh/agenteAsistenciaLicencia/indexAgenteAsistenciaLicencia.scala.html
@@ -1,4 +1,4 @@
-@(paginador:  utils.pagination.Pagination[AgenteAsistenciaLicencia], editable: Boolean)
+@(paginador:  utils.pagination.Pagination[AgenteAsistenciaLicencia], editable: Boolean,p:Map[Long,Integer])
 @import helper._
 @import utils._
 @import models.auth._
