--- a/app/views/haberes/mainHaberes.scala.html
+++ b/app/views/haberes/mainHaberes.scala.html
@@ -13,7 +13,8 @@
 						<li><a href="@controllers.haberes.routes.LiquidacionConceptosController.index()">Conceptos</a></li>
 						<li><a href="@controllers.haberes.routes.LiquidacionBaseCalculosController.index()">Base cálculo</a></li>
 						<li><a href="@controllers.haberes.routes.PuestosLaboralesController.index()">Puestos Laborales</a></li>
-					
+					<li class="titulo">Controles</li>
+						<li><a href="@controllers.haberes.routes.ControlHaberes.controlGuardiasPorAgentePorPeriodo()">Guardias Por Agente</a></li>
 					<li class="titulo">Configuración</li>
 						<li><a href="@controllers.haberes.routes.EscalasLaboralesMontosController.index()">Montos Conceptos</a></li>
 						<li><a href="@controllers.haberes.routes.EscalasLaboralesController.index()">Escalas Laborales</a></li>
