--- a/app/views/informes/informeMensual/index.scala.html
+++ b/app/views/informes/informeMensual/index.scala.html
@@ -11,7 +11,8 @@ costoPorEscalaCm:List[com.avaje.ebean.SqlRow],
 costoPorClasificacionParque:List[com.avaje.ebean.SqlRow],
 costoPorClasificacionCm:List[com.avaje.ebean.SqlRow],
 countProfesionParque:List[com.avaje.ebean.SqlRow],
-countProfesionCm:List[com.avaje.ebean.SqlRow]
+countProfesionCm:List[com.avaje.ebean.SqlRow],
+listaPorInstitucionSUBRubro:java.util.Map[String,java.math.BigDecimal]
 )
 @import helper._
 @import utils._
