--- a/app/views/informes/informeObligacion/obligacion_new.scala.html
+++ b/app/views/informes/informeObligacion/obligacion_new.scala.html
@@ -52,13 +52,17 @@
 					@if(key == "MINISTERIO DE SALUD PUBLICA"){
 						<img src="/assets/images/logo-ministerio.jpeg" width="200" height="200"/>
 					}
-					@if(key == "HOSPITAL PEDIATRICO"){
-						<img src="/assets/images/logo-pediatria.jpg" width="200" height="200"/>
-					}
+
 
 					@if(key == "HOSPITAL PEDIATRICO"){
 						<img src="/assets/images/logo-pediatria.jpg" width="200" height="200"/>
 					}
+
+					@if(key == "INSTITUTO DE GENETICA HUMANA"){
+						<img src="/assets/images/logo-igh.jpeg" width="200" height="200"/>
+					}
+
+
 
 
 				</td>
