--- a/app/views/rrhh/profesion/indexProfesion.scala.html
+++ b/app/views/rrhh/profesion/indexProfesion.scala.html
@@ -81,6 +81,7 @@
 					<th width="30">#</th>
 					<th width="50">Código</th>
 					<th width="">Nombre</th>
+					<th width="">Asistencial</th>
 					<th class="30">#</th>
 				</tr>
 			</thead>
@@ -94,6 +95,7 @@
 					</td>
 					<td>@(p.id)</td>
 					<td>@(p.nombre)</td>
+					<td>@if(p.asistencial){SI}else{NO}</td>
 					<td>
 						<a class="btn btn-default btn-xs delete-confirm-link notSeleccion" href="@controllers.rrhh.routes.ProfesionesController.eliminarProfesion(p.id)">
 							<i class="glyphicon glyphicon-remove-circle"></i>
