--- a/app/views/recupero/recuperoPlanilla/modalBusquedaRecuperoPlanilla.scala.html
+++ b/app/views/recupero/recuperoPlanilla/modalBusquedaRecuperoPlanilla.scala.html
@@ -1,6 +1,6 @@
 @(buscador: utils.pagination.Pagination[models.recupero.RecuperoPlanilla], formBuscador: DynamicForm)
 @import helper._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
 <div id="modalBusquedaPlanillas" class="contenedorPaginador ajaxPaginador">
 <form action="@controllers.recupero.routes.RecuperoPlanillasController.modalBuscar()" method="GET">
@@ -9,15 +9,15 @@
 			<label class="control-label">Numero</label>
 			@inputText(formBuscador("numero"), 'class -> "form-control", 'autofocus -> "autofocus")
 		</div>
-		
+
 		<div class="col-sm-3">
 			<label class="control-label">Ejercicio</label>
 			@select(formBuscador("ejercicio"), Ejercicio.getEjercicios().map { p => p.id.toString -> p.nombre}, 'class -> "form-control select", '_default -> "Seleccionar")
 		</div>
 
-		
+
 		<div class="col-sm-3">
-			<label class="control-label">&nbsp 
+			<label class="control-label">&nbsp
 			<button class="btn btn-primary form-control">Buscar</button>
 			</label>
 		</div>
@@ -29,8 +29,8 @@
 	    <em>No se encuentran planillas</em>
 	</div>
 } else {
-    Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s). 
-    	
+    Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s).
+
 	<table class="table table-striped table-bordered table-hover">
 		<thead>
 			<tr>
@@ -40,19 +40,20 @@
 			</tr>
 		</thead>
 		<tbody>
-    	
+
     @for(planilla <- buscador.getList) {
 	<tr data-id="@planilla.id" class="modalSeleccionPlanilla pointer">
 		<td>@planilla.getRecuperoPlanillaEjercicioDeposito()</td>
 		<td>@planilla.expediente.getExpedienteEjercicio()</td>
-	</tr>    
+		<td>@planilla.deposito.nombre</td>
+	</tr>
     }
     </tbody>
     </table>
-    
+
 	<div class="pagination pull-right">
 	    @views.html.helpers.paginador(buscador, controllers.recupero.routes.RecuperoPlanillasController.modalBuscar())
-	</div>	
+	</div>
 }
 </div>
 
@@ -66,7 +67,7 @@ $( function(){
 			$(document).trigger("modal.seleccion.planilla.simple", data);
 		});
 	});
-	
+
 	contenedor.find('form').on('submit', function(){
 		var url = $(this).attr("action");
 		var query = $(this).serialize();
