detele tipo relacion

--- a/app/views/rrhh/agenteAsistenciaLicencia/indexLicenciaNovedadesLiquidacion.scala.html
+++ b/app/views/rrhh/agenteAsistenciaLicencia/indexLicenciaNovedadesLiquidacion.scala.html
@@ -153,7 +153,7 @@
 
 		</div>
 		<div class="row" >
-			<div class="col-sm-2">
+			<!-- <div class="col-sm-2">
 				<div class="form-group">
 					<label for="cuit" class="control-label">Tipo Relacion
 					@select(formBuscador("tipo_relacion_laboral"),
@@ -161,7 +161,7 @@
 					'class -> "form-control select", '_default -> "Seleccionar")
 					</label>
 				</div>
-			</div>
+			</div> -->
 			<div class="col-sm-5">
 				<div class="form-group">
 					<label for="inputOrganigrama" class="control-label">Departamento/Servicio</label>
